# graphio-ontology-sdk

./: .gitignore  ARCHITECTURE.md  CODEGEN_GUIDE.md  README.md  pyproject.toml  requirements.txt
docs/: datacatalog_metatype_example.md  metatype_table_data.md
function_example/: check_objects_in_insert.py  insert_objects_in_alert.py  update_unit_xy.py
graphio_sdk/: __init__.py  client.py  edits.py  example.py  meta_type.py  mq_publisher.py  object_type.py  ontology.py  query.py
graphio_sdk/codegen/: __init__.py  codegen_engine.py  example_mq_consumer.py  file_generator.py  mq_consumer.py  schema_fetcher.py
graphio_sdk/knowledge_graph/: __init__.py  knowledge_graph.py
graphio_sdk/ontology/: __init__.py  action_type.py  automation.py  base.py  client.py  edits.py  example.py  object_type.py  ontology.py  operators.py  query.py
graphio_sdk/ontology/links/: __init__.py
graphio_sdk/ontology/objects/: __init__.py
graphio_sdk/schema/: __init__.py  meta_type_schema.py
