[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "graphio-sdk"
version = "0.1.0"
description = "GraphIO Ontology SDK - Palantir Foundry 스타일 Python 클라이언트"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [
    {name = "GraphIO Team"}
]
keywords = ["graphio", "ontology", "sdk", "graph", "database"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Database",
]

dependencies = [
    "requests>=2.25.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
]

[project.urls]
Homepage = "https://github.com/iris-graphio/graphio-ontology-sdk"
Documentation = "https://github.com/iris-graphio/graphio-ontology-sdk#readme"
Repository = "https://github.com/iris-graphio/graphio-ontology-sdk"
Issues = "https://github.com/iris-graphio/graphio-ontology-sdk/issues"

[tool.setuptools]
packages = ["graphio_sdk"]

[tool.setuptools.package-data]
"*" = ["py.typed"]

